# doc_review

./: .env.example  .gitignore  .vercelignore  README.md  pyproject.toml  requirements.txt  vercel.json
app/: config.py  main.py  models.py  ui.py
app/services/: ai_analyzer.py  annotator.py  chapter_parser.py  docx_helpers.py  visit_notifier.py
app/static/: index.html
app/templates/: index.html
public/: index.html
sample/: manuscript.docx
scripts/: create_sample_docx.py
